--- a/Html/index.html
+++ b/Html/index.html
@@ -23,11 +23,6 @@
     <h2>Welcome to HealConnect!</h2>
   </div>
 
-  <script> // loading screen
-    setTimeout(function () {
-      document.getElementById('loading-screen').style.display = 'none';
-      document.getElementById('homepage').style.display = 'block';
-    }, 3000);
-  </script>
+  <script src="loading.js"></script>
 </body>
 </html>
